[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]

[project]
authors = [
    {name = "uvjim"}
]
dependencies = ["aiohttp"]
description = "A Python library for the Linksys Velop Mesh system"
dynamic = ["version"]
name = "pyvelop"
readme = "README.rst"
requires-python = ">= 3.11"

[project.optional-dependencies]
cli = ["asyncclick"]

[project.urls]
Homepage = "https://github.com/uvjim/pyvelop"
Repository = "https://github.com/uvjim/pyvelop"
Issues = "https://github.com/uvjim/pyvelop/issues"

[tool.setuptools_scm]

[tool.setuptools.packages.find]
include = ["pyvelop"]
